fix: small cretificate view on mobile

--- a/src/pages/Certificates/index.scss
+++ b/src/pages/Certificates/index.scss
@@ -122,6 +122,7 @@
 .certificateContent {
   margin-left: 25%
 }
+
 .box_certificate_large::after {
   content: "";
   background-image: url("../../assets/images/AllCertificate/logo2.png");
@@ -176,6 +177,8 @@
   line-height: 25px;
   // text-transform: capitalize;
   color: rgb(0 0 0);
+  margin-bottom: 12px;
+
 }
 .cercifi_con_large p span {
   font-weight: 600;
@@ -183,9 +186,26 @@
 .cercifi_con_small p {
   font-weight: 600;
 }
-.cercifi_con_large p {
+
+.cercifi_sm_con_large p {
+  font-family: Ubuntu;
+  font-style: normal;
+  font-weight: normal;
+  margin: 0;
+  font-size: 18.9604px;
+  line-height: 25px;
+  // text-transform: capitalize;
+  color: rgb(0 0 0);
   margin-bottom: 12px;
+
 }
+.cercifi_sm_con_large p span {
+  font-weight: 600;
+}
+.cercifi_con_small p {
+  font-weight: 600;
+}
+
 hr.hr_line {
   border: 1px solid #828282;
   max-width: 401px;
@@ -204,7 +224,23 @@ hr.hr_line {
   // margin-bottom: 21px;
   margin: 0;
 }
+
+.cercifi_sm_con_large h2 {
+  font-family: Dancing Script;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 59.2511px;
+  // line-height: 18px;
+  color: rgb(236 73 138);
+  // margin-top: 50px;
+  // margin-bottom: 21px;
+  margin: 0;
+}
 .cercifi_con_large img.cer_text {
+  margin-bottom: 23px;
+  max-width: 100%;
+}
+.cercifi_sm_con_large img.cer_text {
   margin-bottom: 23px;
   max-width: 100%;
 }
@@ -225,6 +261,32 @@ hr.hr_line {
   color: rgb(236 73 138);
 }
 .cercifi_con_large h5 {
+  font-family: "SegoeUI_medium";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26.1117px;
+  line-height: 35px;
+  margin: 0;
+  color: rgb(0 0 0);
+}
+
+.cercifi_sm_con_large img.last-img {
+  margin-bottom: 26px;
+}
+.cercifi_sm_con_large h3 {
+  margin-top: 9.52px;
+  margin-bottom: 18.21px;
+  font-family: "SegoeUI_medium";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 29.6255px;
+  line-height: 39px;
+  display: flex;
+  align-items: center;
+  // text-transform: lowercase;
+  color: rgb(236 73 138);
+}
+.cercifi_sm_con_large h5 {
   font-family: "SegoeUI_medium";
   font-style: normal;
   font-weight: 600;
@@ -525,6 +587,9 @@ hr.hr_line2 {
     padding: 15px 5px;
     width: 120px;
   }
+  .box_small {
+    height: 460px !important;
+  }
 }
 
 @media screen and (min-device-width: 769px) and (max-device-width: 1024px) {
@@ -708,6 +773,17 @@ div.cer_PDF .cercifi_con_large h2 {
   align-items: center;
   color: rgb(236 73 138);
 }
+div.cer_PDF .cercifi_sm_con_large h2 {
+  font-family: Dancing Script;
+  font-style: normal;
+  font-weight: normal;
+  margin: 0;
+  font-size: 178.405px;
+  // line-height: 53px;
+  display: flex;
+  align-items: center;
+  color: rgb(236 73 138);
+}
 div.cer_PDF img.last-img {
   margin-bottom: 86px;
   margin-top: 35px;
@@ -716,7 +792,17 @@ div.cer_PDF .cercifi_con_large h5 {
   font-size: 74.0206px;
   line-height: 98px;
 }
+div.cer_PDF .cercifi_sm_con_large h5 {
+  font-size: 74.0206px;
+  line-height: 98px;
+}
 div.cer_PDF .cercifi_con_large h3 {
+  font-size: 90.4696px;
+  line-height: 120px;
+  margin-top: 29px;
+  margin-bottom: 53px;
+}
+div.cer_PDF .cercifi_sm_con_large h3 {
   font-size: 90.4696px;
   line-height: 120px;
   margin-top: 29px;
@@ -727,6 +813,11 @@ div.cer_PDF p.first-number {
   line-height: 77px;
 }
 div.cer_PDF .cercifi_con_large p {
+  font-size: 57.5716px;
+  line-height: 77px;
+  margin-bottom: 61px;
+}
+div.cer_PDF .cercifi_sm_con_large p {
   font-size: 57.5716px;
   line-height: 77px;
   margin-bottom: 61px;
@@ -802,19 +893,39 @@ div.cer_PDF hr.hr_line2 {
 
 @media screen and ( max-width:480px ) {
 
+  .cercifi_small {
+    margin-top: 90px !important;
+  }
+  .cer_log_small {
+    margin-top: 45px !important
+  }
+
     .cercifi_con_large {
         padding-left: 0;
         margin-top: 30px; 
     }
+    .cercifi_sm_con_large {
+      padding-left: 0;
+      margin-top: 30px; 
+  }
     .cercifi_con_large img.last-img {
         margin-bottom: 0;
         max-width: 70%;
     }
+    .cercifi_sm_con_large img.last-img {
+      margin-bottom: 0;
+      max-width: 70%;
+  }
     .cercifi_con_large h5 {
         font-size: 15px;
         line-height: 25px;
         margin: 0;
     }
+    .cercifi_sm_con_large h5 {
+      font-size: 15px;
+      line-height: 25px;
+      margin: 0;
+  }
     p.first-number {
         font-size: 10px;
         line-height: 15px;
@@ -833,11 +944,29 @@ div.cer_PDF hr.hr_line2 {
         align-items: center;
     
     }
+    .cercifi_sm_con_large img.cer_text {
+      margin-bottom: 0!important;
+      max-width: 60%;
+    }
+    .cercifi_sm_con_large h3 {
+        margin-top: 0;
+        margin-bottom: 0;
+        font-size: 16.6255px;
+        line-height: 26px;
+        display: flex;
+        align-items: center;
+    
+    }
     .cercifi_con_large p {
         font-size: 12px;
         line-height: 14px;
         padding-right: 10px;
     }
+    .cercifi_sm_con_large p {
+      font-size: 12px;
+      line-height: 14px;
+      padding-right: 10px;
+  }
     .cer_logo {
         display: grid;
         margin-left: 0;
@@ -880,6 +1009,10 @@ div.cer_PDF hr.hr_line2 {
         margin-bottom: 0;
         max-width: 96%;
     }
+    .cercifi_sm_con_large img.last-img {
+      margin-bottom: 0;
+      max-width: 96%;
+  }
     .box_certificate_large .cer_logo img.img1 {
         height: auto;
         max-width: 60%;
@@ -926,8 +1059,19 @@ div.cer_PDF hr.hr_line2 {
       margin-top: 50px;
       margin-left: 120px;
     }
+    .cercifi_sm_con_large {
+      padding-left: 0;
+      margin-top: 50px;
+      // margin-left: 120px;
+    }
     .cercifi_con_large h2 {
       font-size: 24px;
+    }
+    .cercifi_sm_con_large h2 {
+      font-size: 24px;
+    }
+    .cercifi_small h2 {
+      font-size: 18px;
     }
     hr.hr_line {
       margin-bottom: 5px;
